# duckbot

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt
.githooks/: pre-push
.github/workflows/: ci-dev-pr.yml  ci-dev.yml  lint.yml  production.yml
db/: skull.sqlite
src/: duckbot.py  duckbot_train_data.csv  example.config.json  main.py  util.py
src/commands/: admin_commands.py  command_helpers.py  database.py  duck_related.py  duckrelated.py  faq.py  fng.py  gemini.py  help_menu.py  hi.py  models.py  skullboard.py  ticketing.py
src/commands/utils/: time.py
src/constants/: colours.py  duck_data.py
src/data/: duckbot_train_data.csv
src/db/: admin_settings.db  skull.sqlite
src/models/: admin_settings_db.py  database.py
src/models/databases/: admin_settings_db.py  skullboard_database.py
src/models/schema/: admin_settings_sql.py  skullboard_sql.py
src/modules/: chat.py  info.py  test.py  utils.py
src/utils/: cms.py  cms_helpers.py  event_roles.py  gemini_rag.py  plotting.py  settings.py  spam_detection.py  tenor.py  time.py
