[tool.poetry]
name = "duckbot"
version = "0.1.0"
description = "DuckBot is the CS Club's Discord Bot, created by the CS Club Open Source Team."
authors = ["CS Club Open Source Team <dev@csclub.org.au>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "2.3.2"
black = "^24.4.2"
poetry-dotenv-plugin = "^0.2.0"
google-generativeai = "^0.7.2"
pathlib = "^1.0.1"
aiosqlite = "^0.20.0"
schedule = "^1.2.2"
pytz = "^2024.1"
matplotlib = "^3.9.2"
levenshtein = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
