[project]
name = "duckbot"
version = "1.0.0"
description = "DuckBot is the CS Club's Discord Bot, created by the CS Club Open Source Team."
authors = [
    { name = "CS Club Open Source Team", email = "dev@csclub.org.au" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "discord-py>=2.4.0",
    "google-generativeai>=0.8.3",
    "levenshtein>=0.26.1",
    "matplotlib>=3.9.2",
    "pathlib>=1.0.1",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "schedule>=1.2.2",
]

[tool.ruff]
lint.select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
lint.ignore = ["E501"] 
lint.fixable = ["ALL"]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]
